--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -121,6 +121,7 @@
   (facebook, $facebook-color),
   (twitter, $twitter-color),
   (google-plus, $google-plus-color),
+  (reddit, $reddit-color),
   (linkedin, $linkedin-color);
 
   @each $socialnetwork, $color in $social {
