--- a/_includes/archive-single-cv.html
+++ b/_includes/archive-single-cv.html
@@ -31,7 +31,9 @@
         <a href="{{ post.link }}">{{ title }}</a><a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
       {% else %}
         <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
-        {% if post.venue and post.year %}
+        {% if post.venue == '' %}
+          - {{ post.year }}
+        {% elsif post.venue and post.year %}
           - {{ post.venue }}, {{ post.year }}
         {% elsif post.venue %}
           - {{ post.venue }}
