--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -74,6 +74,7 @@
       {% endif %}
       {% if post.code %}
         [<a href=" {{ post.code }} " target="_blank"><u>code</u></a>]
+        {% endif %}  
       {% if post.data %}
         [<a href=" {{ post.data }} " target="_blank"><u>data</u></a>]
       {% endif %}
