--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -43,9 +43,39 @@
     {% if post.collection == 'teaching' %}
       <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
     {% elsif post.collection == 'publications' and post.venue != '' %}
-      <i>{{ post.authors }}</i><br><div style="line-height:2.0"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ "Published at: " }}</strong><i>{{ post.venue }}</i>, {{ post.year | default: "1900-01-01" }}</div>
+      <i>{{ post.authors }}</i><br><div style="line-height:2.0"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ "Published at: " }}</strong><i>{{ post.venue }}</i>, {{ post.year | default: "1900-01-01" }}</div><br>
+      {% if post.paperurl %}
+        [<a href=" {{ post.paperurl }} " target="_blank"><u>paper</u></a>]
+      {% endif %}
+      {% if post.arxiv %}
+        [<a href=" {{ post.arxiv }} " target="_blank"><u>arXiv</u></a>]
+      {% endif %}
+      {% if post.bib %}
+        [<a href=" {{ post.bib }} " target="_blank"><u>bib</u></a>]
+      {% endif %}
+      {% if post.code %}
+        [<a href=" {{ post.code }} " target="_blank"><u>code</u></a>]
+        {% endif %}  
+      {% if post.data %}
+        [<a href=" {{ post.data }} " target="_blank"><u>data</u></a>]
+      {% endif %}
     {% elsif post.collection == 'publications' and post.venue == '' %}
-      <i>{{ post.authors }}</i><br><div style="line-height:2.0"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ "Under Review" }}</strong>, {{ post.year | default: "1900-01-01" }}</div>  
+      <i>{{ post.authors }}</i><br><div style="line-height:2.0"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ "Under Review" }}</strong>, {{ post.year | default: "1900-01-01" }}</div><br>
+      {% if post.paperurl %}
+        [<a href=" {{ post.paperurl }} " target="_blank"><u>paper</u></a>]
+      {% endif %}
+      {% if post.arxiv %}
+        [<a href=" {{ post.arxiv }} " target="_blank"><u>arXiv</u></a>]
+      {% endif %}
+      {% if post.bib %}
+        [<a href=" {{ post.bib }} " target="_blank"><u>bib</u></a>]
+      {% endif %}
+      {% if post.code %}
+        [<a href=" {{ post.code }} " target="_blank"><u>code</u></a>]
+        {% endif %}  
+      {% if post.data %}
+        [<a href=" {{ post.data }} " target="_blank"><u>data</u></a>]
+      {% endif %}  
     {% elsif post.date %}
      <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ "Posted on: " }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
     {% endif %}
@@ -62,23 +92,7 @@
       <p>Recommended citation: {{ post.citation }} </p>
     {% endif %}
     
-    <p>
-      {% if post.paperurl %}
-        [<a href=" {{ post.paperurl }} " target="_blank"><u>paper</u></a>]
-      {% endif %}
-      {% if post.arxiv %}
-        [<a href=" {{ post.arxiv }} " target="_blank"><u>arXiv</u></a>]
-      {% endif %}
-      {% if post.bib %}
-        [<a href=" {{ post.bib }} " target="_blank"><u>bib</u></a>]
-      {% endif %}
-      {% if post.code %}
-        [<a href=" {{ post.code }} " target="_blank"><u>code</u></a>]
-        {% endif %}  
-      {% if post.data %}
-        [<a href=" {{ post.data }} " target="_blank"><u>data</u></a>]
-      {% endif %}
-    </p>
+
 
   </article>
 </div>
